# matts-cloudflare-kit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml
api/: index.html
docs/: api.md  index.md
guestbook/: Cargo.toml  guestbook_schema.sql  wrangler_template.toml
guestbook/src/: guestbook_template.html  lib.rs
quotes/: Cargo.toml  generate_schema_with_quotes.py  quotes.md  quotes_schema.sql  wrangler_template.toml
quotes/src/: lib.rs  quote_component.html
site/: index.html  sitemap.xml
site/search/: search_index.json
spotify_top_songs/: Cargo.toml  get_refresh_token.md  wrangler_template.toml
spotify_top_songs/src/: lib.rs
