[package]
name = "guestbook"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Marsico <mattmarsico1@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ['json', 'macros'] }
tower-service = "0.3.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
