[package]
name = "mattmarsicodotcom_api"
version = "0.1.0"
edition = "2021"
authors = ["Matt Marsico <mattmarsico1@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
chrono = "0.4.42"
serde = "1.0.224"
serde_json = "1.0.145"
rspotify = "0.15.3"
futures-util = "0.3.31"
